--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next": "15.2.2",
+    "i18next-http-backend": "3.0.2",
+    "i18next": "24.2.2",
+    "next-i18next": "15.4.2",
+    "react-i18next": "15.4.1"
   }
 }
